--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,16 @@
 language: node_js
-node_js: 
-  - "stable"
-script: "true"
+node_js:
+  - 10.13.0
+install:
+  - npm install
+script:
+  - npm run test
+branches:
+  only:
+    - master
 deploy: 
   provider: heroku
   api_key:
     secure: 4d0f2754-3a8f-4960-bbcf-492fbd4a8905
-  on:
-    tags: true
-    all_branches: true
+  app:
+    master: parcel-tracking-system-be
