--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 install:
   - npm install
 script:
-  - npm run test
+  - npm install
 branches:
   only:
     - master
@@ -14,4 +14,3 @@ deploy:
     secure: 4d0f2754-3a8f-4960-bbcf-492fbd4a8905
   app:
     master: parcel-tracking-system-be
-    
