--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@ node_modules/
 .env
 .env.test
 .env*.local
-
+.travis.yml
 
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
