--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "parceltracking",
   "version": "1.0.0",
   "description": "This is an example of how you may give instructions on setting up your project locally.\r To get a local copy up and running follow these simple example steps.",
-  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Test is ignored\"",
-    "start": "node index.js"
+    "start": "nodemon -r esm index.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +20,7 @@
   "homepage": "https://github.com/Bawanthathilan/Parcel-Tracking-system-be#readme",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
     "mongoose": "^5.11.13",
     "nodemon": "^2.0.7"
