--- a/package.json
+++ b/package.json
@@ -7,6 +7,17 @@
     "test": "echo \"Test is ignored\"",
     "start": "nodemon -r esm index.js"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": "npm run build"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write"
+    ]
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Bawanthathilan/Parcel-Tracking-system-be.git"
@@ -26,6 +37,7 @@
     "nodemon": "^2.0.7"
   },
   "devDependencies": {
+    "husky": "^5.0.8",
     "jest": "^26.6.3",
     "mocha": "^8.2.1"
   }
